tests/negative/other/nested_function_return_context.tx
// EXPECTED: COMPILE_ERROR
// Description: Nested functions must not break the enclosing function return-type checking.

function outer(): int {
    function inner(): string {
        return "ok";
    }

    return "wrong";
}

function main() {}
